# IRFuzzer

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FuzzMutate.patch  LICENSE  README.md  build.sh  clean.sh  cross-compile-setup.sh  csmith-eval.sh  csmith-gen.sh  fuzz.sh  init.sh  libFuzzer.patch  pre-fuzz.sh
llvm-isel-afl/: .gitignore  CMakeLists.txt  afl-driver.cpp  llvm-isel-fuzzer.cpp
mapper/: .gitignore  CMakeLists.txt  README.md
mapper/include/: commandline.h  lookup.h  matchertree.h  predicate.h  shadowmap.h
mapper/scripts/: gen-lookup  gen-pred-comb-cmds  gen-pred-stats  gen-records  pat  ppred  pred
mapper/src/: commandline.cpp  lookup.cpp  mapper.cpp  matchertree.cpp  predicate.cpp  shadowmap.cpp
mutator/: CMakeLists.txt
mutator/include/: BootstrapFiles.h  FunctionDef.h  InsertIntrinsicStrategy.h  matcher.h  mutator.h
mutator/scripts/: .gitignore  validate.sh
mutator/src/: BootstrapFiles.cpp  InsertIntrinsicStrategy.cpp  afl-mutator.c  fuzzmutate.cpp  irfuzzer.cpp  libfuzzer.cpp  main.cpp  mutator.cpp
scripts/: batch_classify.py  batch_compile.py  batch_expr_cov.py  batch_llc_cov.py  classify.py  classify_llc_tests.py  collect_bad_inputs.py  collect_combined_mt_coverage.py  collect_matcher_table_size.py  collect_seeds.py  combine-fuzzing-results.py  combine_crash_data.py  combine_fuzzing_results.py  common.py  compare_experiments.py  cov.py  fuzz.py  llc_test_parsing.py  process_data.ipynb  process_data.py  requirements.txt  stat_experiments.py  summarize_crash_data.py
scripts/lib/: __init__.py  arch.py  archs.py  coverage_map.py  experiment.py  fs.py  llc_command.py  llc_test.py  matcher_table_sizes.py  plot_data.py  process_concurrency.py  target.py  target_lists.py  time_parser.py  triple.py
seeds/: 2002-01-31-UseStuckAround.bc  2002-03-28-UninitializedVal.bc  2002-05-02-MissSecondInst.bc  2002-05-15-AgressiveSubMove.bc  2002-07-09-DominanceProblem.bc  2002-07-17-CastRef.bc  2002-07-17-ConstantRef.bc  2002-07-29-Segfault.bc  2002-08-30-GetElementPtrTest.bc  2003-05-26-CastMiscompile.bc  2003-08-23-EmptySwitch.bc  2003-09-09-VolatileLoadElim.bc  2003-09-15-InfLoopCrash.bc  2003-10-09-PreserveWeakGlobals.bc  2003-10-28-MergeExternalConstants.bc  2004-04-04-InstCombineReplaceAllUsesWith.bc  2004-05-07-UnsizedCastLoad.bc  2004-07-27-ConstantExprMul.bc  2004-08-09-RemInfLoop.bc  2004-08-10-BoolSetCC.bc  2004-10-17-InlineFunctionWithoutReturn.bc  2004-12-08-RemInfiniteLoop.bc  2005-06-15-ShiftSetCCCrash.bc  2005-06-16-RangeCrash.bc  2006-02-13-DemandedMiscompile.bc  2006-02-28-Crash.bc  2006-12-01-TruncBoolBug.bc  2007-01-13-ExtCompareMiscompile.bc  2007-02-05-BitCast.bc  2007-02-07-FuncRename.bc  2007-03-19-BadTruncChangePR1261.bc  2007-10-18-VarargsReturn.bc  2008-01-27-FloatSelect.bc  2008-02-13-MulURem.bc  2008-02-16-SDivOverflow2.bc  2008-05-31-AddBool.bc  2008-06-05-ashr-crash.bc  2008-07-08-SubAnd.bc  2008-07-09-SubAndError.bc  2008-07-16-fsub.bc  (+53 more)
